# measurement-pred

./: .gitignore  README.md  models.py  pyproject.toml  register.py  requirements.txt  train.py  train_diamonds.py
conf/: automodel_diamonds_slurm_eval.yaml  codegen_diamonds_local_test.yaml  codegen_diamonds_slurm.yaml  codegen_diamonds_slurm_test.yaml  pythia_diamonds_local_test.yaml
conf/hparams/: hparams.yaml
conf/hydra/launcher/: local.yaml  slurm_chai.yaml
conf/model/: automodel_diamonds.yaml  codegen_diamonds.yaml  pythia_diamonds.yaml
measurement_pred/: configuration_code_gen_measuremet_pred.py  configuration_code_gen_mp.py  configuration_gpt_neox_measurement_pred.py  configuration_gpt_neox_mp.py  configuration_mp.py  modeling_code_gen_measurement_pred.py  modeling_code_gen_mp.py  modeling_gpt_neox_measurement_pred.py  modeling_gpt_neox_mp.py  modeling_measurement_pred.py  modeling_mp.py
